[package]
name = "uscript-ntl"
version = "0.1.0"
authors = ["bartv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[[bin]]
name = "uscript-ntl"
path = "src/main.rs"